--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ before_install:
   - sudo apt-get install gfortran
 
 script:
-  - gfortran -fprofile-arcs -ftest-coverage -O0 hello.f90 -o hello
+  - gfortran -O0 main.f90 -o main
+
   - ./hello
 
 after_success:
