--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: c
 os: osx
 
+before_install:
+  - brew install gcc
+  - brew link --overwrite gcc
+
 script:
   - gfortran -O0 main.f90 -o main
 
